--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest --watchAll",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "npm run start-redis && nodemon index.js",
+    "start-redis": "redis-server --daemonize yes"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,10 @@
     "jest": "^23.6.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "hex-to-binary": "^1.0.1",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "redis": "^2.8.0"
   }
 }
